--- a/design.html
+++ b/design.html
@@ -17,40 +17,8 @@
 <body>
     <!--container-->
     <div class="container">
-        <!--logo-->
-        <a href="index.html"><img src="../img/logo.png" alt="Logo Plex" class="logo" /></a>
-        <!--navigation-->
-        <nav class="navigation">
-            <ul>
-                <li>
-                    <a href="contributors.html">
-                        <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html#intro">
-                        <span class="icon"><ion-icon name="document-text-outline"></ion-icon></span>
-                    </a>
-                </li>
-                <li class="active">
-                    <a href="design.html">
-                        <span class="icon"><ion-icon name="color-palette-outline"></ion-icon></span>
-                        <span class="title"></span>
-                    </a>
-                </li>
-                <li>
-                    <a href="code.html">
-                        <span class="icon"><ion-icon name="code-slash-outline"></ion-icon></span>
-                    </a>
-                </li>
-                <li>
-                    <a href="scope.html">
-                        <span class="icon"><ion-icon name="git-compare-outline"></ion-icon></span>
-                    </a>
-                </li>
-            </ul>
-            <p class="version">v.1.0</p>
-        </nav>
+        <!--logo / navigation-->
+        <sidebar-menu></sidebar-menu>
         <!--main-->
         <main>
             <div class="intro-page sub-page">
@@ -61,39 +29,39 @@
                 </div>
 
                 <hr>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pharetra, neque non aliquam tincidunt, urna lacus ornare urna, eu rutrum lectus metus vel lorem. Quisque et iaculis velit. Maecenas vel leo in felis efficitur malesuada. Aenean
-                    ut lectus in est tincidunt cursus vitae eu dui. Nulla ut libero eu sem egestas finibus. Integer mauris justo, finibus in ullamcorper ac, eleifend nec eros. Nullam at lacinia risus, eget varius nisi. In varius tortor at nunc efficitur
-                    aliquam. Mauris quis ultrices metus, vitae tincidunt purus. Fusce ac hendrerit magna. Suspendisse nec nisl ut arcu vestibulum pretium ut sed ipsum. </p>
+                <p>Om de PLEX tool zo goed mogelijk op te leveren is er gebruik gemaakt van user research. Tevens is er een huisstijl ontwikkeld voor een unieke en consequente uitstraling van het PLEX project. Voor de toepassing van deze onderdelen zijn
+                    onderstaande bestanden beschikbaar.</p>
 
-                <h2>Customer research</h2>
+                <h2>Research- & design resources:</h2>
                 <ul class="list">
-                    <li>Customer interview report template</li>
-                    <li>...</li>
-                    <li>...</li>
+                    <li>User research template</li>
+                    <li>Huisstijl guide (PDF)</li>
+                    <li>Hi-fi prototype (Adobe XD)</li>
                 </ul>
-                <!--contributors-->
+
+                <!--Project View-->
                 <div class="cards-container">
-                    <div class="cards">
+                    <div class="cards design">
                         <h3 class="cards-heading">Dashboard view</h3>
                         <div class="cards-img">
                             <img src="../img/plex-dashboard.png" alt="" />
                         </div>
 
                     </div>
-                    <div class="cards">
+                    <div class="cards design">
                         <h3 class="cards-heading">Project List view</h3>
                         <div class="cards-img">
                             <img src="../img/plex-project-list-grid.png" alt="" />
                         </div>
 
                     </div>
-                    <div class="cards">
+                    <div class="cards design">
                         <h3 class="cards-heading">Setting view</h3>
                         <div class="cards-img">
                             <img src="../img/plex-settings.png" alt="" />
                         </div>
                     </div>
-                    <div class="cards">
+                    <div class="cards design">
                         <h3 class="cards-heading">Student view</h3>
                         <div class="cards-img">
                             <img src="../img/plex-student.png" alt="" />
