--- a/scope.html
+++ b/scope.html
@@ -17,40 +17,8 @@
 <body>
     <!--container-->
     <div class="container">
-        <!--logo-->
-        <a href="index.html"><img src="../img/logo.png" alt="Logo Plex" class="logo" /></a>
-        <!--navigation-->
-        <nav class="navigation">
-            <ul>
-                <li>
-                    <a href="contributors.html">
-                        <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html#intro">
-                        <span class="icon"><ion-icon name="document-text-outline"></ion-icon></span>
-                    </a>
-                </li>
-                <li>
-                    <a href="design.html">
-                        <span class="icon"><ion-icon name="color-palette-outline"></ion-icon></span>
-                        <span class="title"></span>
-                    </a>
-                </li>
-                <li>
-                    <a href="code.html">
-                        <span class="icon"><ion-icon name="code-slash-outline"></ion-icon></span>
-                    </a>
-                </li>
-                <li class="active">
-                    <a href="scope.html">
-                        <span class="icon"><ion-icon name="git-compare-outline"></ion-icon></span>
-                    </a>
-                </li>
-            </ul>
-            <p class="version">v.1.0</p>
-        </nav>
+        <!--logo / navigation-->
+        <sidebar-menu></sidebar-menu>
         <!--main-->
         <main>
             <div class="intro-page sub-page">
